Adds 'clear board' button.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <form class="text_new_card_form" action="javascript:">
         <input type="text" class="text_new_card"/>
         <button class="button_new_card">New Card</button>
+        <button class="button_clear_board">Clear Board</button>
     </form>
 </div>
 <div class="columns">
