--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="description" content="A proof of concept collaborative editing system with structured data">
+    <meta name="description" content="A tool for doing affinity mapping estimations with a distributed team">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Wikia Estimator</title>
+    <title>Estimator</title>
 </head>
 <body>
 <div id="app"></div>
